--- a/aulaBD/aulaBD/.env
+++ b/aulaBD/aulaBD/.env
@@ -1,1 +1,1 @@
-CONNECTION_STRING=postgres://postgres:postgres@localhost:5432/aulaDB
+CONNECTION_STRING=postgres://postgres:fernandabebe@localhost:5432/aulaBD
